[feature] Revise WebDAV configuration